@@ -46,11 +46,11 @@
 15.0
 % Jz (inertial moment w.r.t. z)
 50.0
-% rg (distance from the ssc32 to G in m)
+% rg (distance from the rudder to G in m)
 1.5
 % rv (distance from the mast to G in m)
 0.5
-% l (distance from the im483i center of pressure to the mast in m)
+% l (distance from the sail center of pressure to the mast in m)
 0.5
 % alphatheta (yaw friction coefficient)
 125.0
@@ -58,10 +58,10 @@
 % alphaf (forward friction coefficient)
 20.0
 %35.0
-% alphag (ssc32 force coefficient)
+% alphag (rudder force coefficient)
 75.0
 %150.0
-% alphav (im483i force coefficient)
+% alphav (sail force coefficient)
 22.0
 %30.0
 % alphaphi (Roll friction coefficient)
@@ -69,14 +69,14 @@
 % alphaw (perturbations due to waves coefficient)
 100.0
 %150.0
-% hv (distance from the im483i center of pressure to G in m)
+% hv (distance from the sail center of pressure to G in m)
 2.1
 %2.15
 % leq (length of the equivalent pendulum in roll in m)
 0.2
-% deltavminreal (min equivalent opening angle of the real im483i in rad)
+% deltavminreal (min equivalent opening angle of the real sail in rad)
 0.30
-% deltavmaxreal (max equivalent opening angle of the real im483i in rad)
+% deltavmaxreal (max equivalent opening angle of the real sail in rad)
 1.20
 % V_med (wind speed in m/s)
 6.0
